# vpn-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-Apache  LICENSE-MIT  README.md  build.rs  kb.yaml  kindest.yaml
.github/workflows/: rustfmt.yml
chart/: Chart.yaml  values.yaml
chart/templates/: cluster_role.yaml  cluster_role_binding.yaml  consumers_deployment.yaml  consumers_pod_monitor.yaml  deployment.yaml  masks_deployment.yaml  masks_pod_monitor.yaml  pod_monitor.yaml  providers_deployment.yaml  providers_pod_monitor.yaml  reservations_deployment.yaml  reservations_pod_monitor.yaml  service_account.yaml
crds/: vpn.beebs.dev_mask_crd.yaml  vpn.beebs.dev_maskconsumer_crd.yaml  vpn.beebs.dev_maskprovider_crd.yaml  vpn.beebs.dev_maskreservation_crd.yaml  vpn.beebs.dev_provider_crd.yaml
operator/: Cargo.toml  Dockerfile  README.md  build.rs  kb.yaml
operator/src/: main.rs  metrics.rs  test.rs
operator/src/consumers/: actions.rs  finalizer.rs  metrics.rs  mod.rs  reconcile.rs
operator/src/masks/: actions.rs  metrics.rs  mod.rs  reconcile.rs  util.rs
operator/src/providers/: actions.rs  finalizer.rs  metrics.rs  mod.rs  reconcile.rs
operator/src/reservations/: actions.rs  finalizer.rs  metrics.rs  reconcile.rs
operator/src/test/: basic.rs  err_no_providers.rs  mod.rs  util.rs  waiting.rs
operator/src/util/: error.rs  finalizer.rs  merge.rs  messages.rs  metrics.rs  mod.rs  patch.rs
scripts/: docker-test.sh  ip-test.sh  test-actual.sh  test-forever.sh
src/: actions.rs  crd.rs  echo.rs  finalizer.rs  main.rs  metrics.rs  test.rs  util.rs
src/masks/: actions.rs  finalizer.rs  reconcile.rs
src/providers/: actions.rs  mod.rs  reconcile.rs
src/util/: error.rs  mod.rs  patch.rs
types/: Cargo.toml  README.md
types/src/: consumer.rs  lib.rs  mask.rs  patch.rs  provider.rs  reservation.rs  types.rs
