[package]
name = "vpn-operator"
version = "0.1.0"
homepage = "https://vpn.beebs.dev/"
repository = "https://github.com/thavlik/vpn-operator/"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["vpn", "operator", "kubernetes", "k8s"]
exclude = ["Dockerfile", "kindest.yaml"]
publish = false # this crate is for the binary

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.78.0", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.17", default-features = false, features = [
    "v1_22",
] }
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
chrono = "0.4.23"
vpn-types = { path = "../types" }
json-patch = "0.3.0"
prometheus = { version = "0.13", optional = true }
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
lazy_static = "^1.4"
const_format = "0.2.30"
uuid = { version = "1.3.0", features = ["v4"] }
clap = { version = "4.1.8", features = ["derive", "env"] }
parse_duration = "2.1.1"

[build-dependencies]
serde_yaml = "0.9"
vpn-types = { path = "../types" }
kube = { version = "0.78.0", default-features = true, features = ["derive"] }

[features]
default = ["metrics"]        # Enable metrics by default
metrics = ["dep:prometheus"] # metrics feature requires prometheus crate
