[package]
name = "vpn-types"
version = "0.1.0"
authors = ["Tom Havlik (thavlik@protonmail.com)"]
edition = "2018"

[dependencies]
kube = { version = "0.78.0", default-features = false, features = [
    "derive",
] }
k8s-openapi = { version = "0.17", default-features = false, features = [
    "v1_22",
] }
serde = "1"
serde_json = "1.0"
schemars = "0.8"
